--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"server": "nodemon backend/server",
 		"client": "npm start --prefix frontend",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"seed": "node backend/seeder/indexSeeder"
+		"seed": "node backend/seeder/indexSeeder",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend "
 	},
 	"author": "Tony",
 	"license": "MIT",
